# ComputationalGeometry

convex_hull/: CMakeLists.txt  ConvexHull.cpp  ConvexHull.h  Makefile  Testing.cpp  UnitTest.cpp  cmake_install.cmake  main.cpp  readme.md
triangulation_couting/: main  main.cpp  main2.cpp
